# OSWispa

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  TRADEMARK.md  install.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml  feature_proposal.yml  installation_problem.yml  runtime_bug.yml
.github/workflows/: ci.yml  codeql.yml  deploy-website.yml  public-release-smoke.yml  release.yml
deploy/: deploy_site.sh
deploy/nginx/: oswispa.tylerbuilds.com.conf
desktop/src-tauri/: Cargo.toml  Info.plist  README.md  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: signal-lifecycle.json
desktop/src-tauri/src/: lib.rs  main.rs
desktop/ui/: README.md  app.js  bridge.js  history.html  index.html  signal.html  styles.css  tauri-adapter.js
desktop/ui/tests/: test_native_shell_contract.py  test_ui_contract.py
docs/: AUDIT-2026-07-18.md  BUILDING.md  LAUNCH_GUIDE.md  OPEN_SOURCE.md  RELEASING.md  USER_GUIDE.md
docs/brand/: MORPHEOS_VOICE_BRAND.md  MORPHEOS_VOICE_VISUAL_DIRECTION.md
docs/privacy/: VOICE_DATA_FLOW.md
docs/rebrand/: 00_CURRENT_STATE_AUDIT.md  01_MIGRATION_MAP.md  02_COMPATIBILITY_DECISIONS.md  03_TEST_PLAN.md  04_TEST_RESULTS.md  05_RELEASE_READINESS.md  06_FINAL_REBRAND_REPORT.md  07_MORPHEOS_SITE_HANDOFF.md
packaging/linux/: oswispa.desktop
packaging/macos/: Info.plist.template  README.txt  launcher.sh
packaging/windows/: README.txt
scripts/: check_website.py  install_helpers.sh  mouse_remap.py  oswispa-toggle.sh  setup_gnome_shortcut.sh
src/: engine.rs  gpu.rs  lib.rs  main.rs  persistence.rs  personalisation.rs  runtime.rs  setup.rs  state.rs
src/audio/: conversion.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/feedback/: mod.rs
src/hotkey/: linux.rs  macos.rs  mod.rs  windows.rs
src/input/: linux.rs  macos.rs  mod.rs  windows.rs
src/models/: mod.rs
src/punctuation/: mod.rs
src/settings/: dialog.rs  mod.rs  personalisation.rs
src/transcribe/: mod.rs
src/tray/: linux.rs  mod.rs
tests/: install_helpers.bash
website/: LAUNCH_GUIDE.md  USER_GUIDE.md  app.js  contact.html  index.html  models.html  styles.css
