[package]
name = "oswispa"
version = "0.3.0"
edition = "2021"
description = "Voice-to-text with Whisper - local-first with configurable hotkeys and optional VPS backend"
authors = ["OSWispa"]
license = "MIT"

[dependencies]
# Audio recording
cpal = "0.15"
hound = "3.5"

# Whisper.cpp bindings (GPU backends enabled via crate features)
whisper-rs = { version = "0.13", default-features = false }

# Global hotkey detection (works on Wayland via evdev)
evdev = "0.12"

# Wayland clipboard
wl-clipboard-rs = "0.8"

# System tray (using libappindicator for GNOME)
ksni = "0.2"

# Config and state
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"

# Notifications
notify-rust = "4.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# System calls for input polling
libc = "0.2"

# Channel for async communication
crossbeam-channel = "0.5"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# CPU detection
num_cpus = "1.16"

# Regex for punctuation commands
regex = "1.10"

# GUI settings dialog (optional)
gtk4 = { version = "0.7", optional = true }

# Networking (remote backend + model downloads)
reqwest = { version = "0.11", features = ["blocking", "json", "multipart", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync"], optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = ["gui"]
gui = ["gtk4", "tokio", "futures-util"]
gpu-hipblas = ["whisper-rs/hipblas"]
gpu-cuda = ["whisper-rs/cuda"]
gpu-metal = ["whisper-rs/metal"]

[profile.release]
opt-level = 3
lto = true
strip = true

[package.metadata.deb]
section = "utils"
priority = "optional"
assets = [
  ["target/release/oswispa", "usr/bin/", "755"],
  ["scripts/oswispa-toggle.sh", "usr/bin/oswispa-toggle", "755"],
  ["packaging/linux/oswispa.desktop", "usr/share/applications/oswispa.desktop", "644"],
  ["packaging/linux/oswispa.svg", "usr/share/icons/hicolor/scalable/apps/oswispa.svg", "644"],
  ["README.md", "usr/share/doc/oswispa/README.md", "644"],
  ["LICENSE", "usr/share/doc/oswispa/LICENSE", "644"],
]
# Additional runtime tools used by OSWispa (beyond shared libs detected automatically).
depends = "alsa-utils, ydotool, netcat-openbsd"
