[package]
name = "oswispa-desktop"
version = "0.5.0"
edition = "2021"
description = "Bounded Tauri desktop shell for the MorpheOS Voice engine"
license = "MIT"
publish = false

[features]
default = ["desktop-runtime"]
desktop-runtime = ["dep:tauri", "dep:tauri-plugin-single-instance"]

[dependencies]
oswispa = { path = "../..", default-features = false }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "=2.11.5", features = ["tray-icon"], optional = true }

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "=2.4.3", optional = true }

[build-dependencies]
tauri-build = { version = "=2.6.3", features = [] }

[dev-dependencies]
serde_json = "1.0"

[[bin]]
name = "oswispa-desktop"
path = "src/main.rs"
required-features = ["desktop-runtime"]
